# Sigma0

./: Cargo.toml  LICENSE  README.md
src/: consts.rs  endgame_tablebase.rs  eval.rs  info.rs  main.rs  material.rs  move_database.rs  move_string_conversion.rs  opening_book.rs  piece_table.rs  promotion_piece.rs  search.rs  search_move.rs  sort_moves.rs  transposition_table.rs  uci.rs
