[package]
name = "Sigma0"
authors = ["TM Ahad <tm.ahad.07@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chess = "3.2.0"
dotenv = "0.15.0"
redis = "0.26.1"
serde_json = "1.0.120"
ureq = { version = "2.10.0", features = ["json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 8
